@@ -1,18 +1,18 @@
 ---
 title: Enlace de Azure Cosmos DB con la aplicación Azure Spring Cloud
 description: Aprenda a enlazar Azure Cosmos DB con la aplicación Azure Spring Cloud
-author: bmitchell287
+author: karlerickson
 ms.service: spring-cloud
 ms.topic: how-to
 ms.date: 10/06/2019
-ms.author: brendm
+ms.author: karler
 ms.custom: devx-track-java
-ms.openlocfilehash: 51f6807ebaa611f8c21588aa4e6dea3461bce265
-ms.sourcegitcommit: 17345cc21e7b14e3e31cbf920f191875bf3c5914
+ms.openlocfilehash: 387d526002411395e8bebc0fa59925bfa383e598
+ms.sourcegitcommit: 6c6b8ba688a7cc699b68615c92adb550fbd0610f
 ms.translationtype: HT
 ms.contentlocale: es-ES
-ms.lasthandoff: 05/19/2021
-ms.locfileid: "110058463"
+ms.lasthandoff: 08/13/2021
+ms.locfileid: "121861333"
 ---
 # <a name="bind-an-azure-cosmos-db-database-to-your-azure-spring-cloud-application"></a>Enlace de una base de datos de Azure Cosmos DB a una aplicación de Azure Spring Cloud
 
@@ -25,13 +25,7 @@ Requisitos previos:
 * Una instancia de Azure Spring Cloud implementada. Para comenzar, siga nuestro [inicio rápido sobre la implementación mediante la CLI de Azure](./quickstart.md).
 * Una cuenta de Azure Cosmos DB con un nivel mínimo de permisos de colaborador.
 
-## <a name="bind-azure-cosmos-db"></a>Enlace de Azure Cosmos DB
-
-Azure Cosmos DB tiene cinco tipos de API diferentes que admiten el enlace. En el procedimiento siguiente se muestra cómo usarlas:
-
-1. Crea una base de datos de Azure Cosmos DB. Consulte el inicio rápido sobre la [creación de una base de datos](../cosmos-db/create-cosmosdb-resources-portal.md) para obtener ayuda. 
-
-1. Registre el nombre de la base de datos. En este procedimiento, el nombre de la base de datos es **testdb**.
+## <a name="prepare-your-java-project"></a>Preparación del proyecto de Java
 
 1. Agregue una de las siguientes dependencias al archivo pom.xml de la aplicación de Azure Spring Cloud. Elija la dependencia que sea adecuada para el tipo de API.
 
@@ -39,9 +33,9 @@ Azure Cosmos DB tiene cinco tipos de API diferentes que admiten el enlace. En e
 
       ```xml
       <dependency>
-          <groupId>com.microsoft.azure</groupId>
-          <artifactId>azure-cosmosdb-spring-boot-starter</artifactId>
-          <version>2.1.6</version>
+          <groupId>com.azure.spring</groupId>
+          <artifactId>azure-spring-boot-starter-cosmos</artifactId>
+          <version>3.6.0</version>
       </dependency>
       ```
 
@@ -73,7 +67,16 @@ Azure Cosmos DB tiene cinco tipos de API diferentes que admiten el enlace. En e
       </dependency>
       ```
 
-1. Use `az spring-cloud app update` para actualizar la implementación actual o `az spring-cloud app deployment create` para crear una implementación. Estos comandos actualizarán o crearán la aplicación con la nueva dependencia.
+1. Actualice la aplicación actual mediante la ejecución de `az spring-cloud app deploy` o cree una implementación para este cambio mediante la ejecución de `az spring-cloud app deployment create`.
+
+## <a name="bind-your-app-to-the-azure-cosmos-db"></a>Enlace de la aplicación a Azure Cosmos DB
+
+#### <a name="service-binding"></a>[enlace del servicio](#tab/Service-Binding)
+Azure Cosmos DB tiene cinco tipos de API diferentes que admiten el enlace. En el procedimiento siguiente se muestra cómo usarlas:
+
+1. Crea una base de datos de Azure Cosmos DB. Consulte el inicio rápido sobre la [creación de una base de datos](../cosmos-db/create-cosmosdb-resources-portal.md) para obtener ayuda.
+
+1. Registre el nombre de la base de datos. En este procedimiento, el nombre de la base de datos es **testdb**.
 
 1. Vaya a la página del servicio Azure Spring Cloud en Azure Portal. Vaya a **Application Dashboard** (Panel de la aplicación) y seleccione la aplicación que va a enlazar a Azure Cosmos DB. Esta aplicación es la misma que actualizó o implementó en el paso anterior.
 
@@ -90,11 +93,90 @@ Azure Cosmos DB tiene cinco tipos de API diferentes que admiten el enlace. En e
 
 1. Para tener la seguridad de que el servicio esté enlazado correctamente, seleccione el nombre del enlace y compruebe sus detalles. El campo `property` debe ser parecido a este ejemplo:
 
-    ```
+    ```properties
     azure.cosmosdb.uri=https://<some account>.documents.azure.com:443
     azure.cosmosdb.key=abc******
     azure.cosmosdb.database=testdb
     ```
+
+#### <a name="terraform"></a>[Terraform](#tab/Terraform)
+El siguiente script de Terraform muestra cómo configurar una aplicación Azure Spring Cloud con la API de MongoDB de Azure Cosmos DB.
+
+```terraform
+provider "azurerm" {
+  features {}
+}
+
+variable "application_name" {
+  type        = string
+  description = "The name of your application"
+  default     = "demo-abc"
+}
+
+resource "azurerm_resource_group" "example" {
+  name     = "example-resources"
+  location = "West Europe"
+}
+
+resource "azurerm_cosmosdb_account" "cosmosdb" {
+  name                = "cosmosacct-${var.application_name}-001"
+  resource_group_name = azurerm_resource_group.example.name
+  location            = azurerm_resource_group.example.location
+  offer_type          = "Standard"
+  kind                = "MongoDB"
+
+  consistency_policy {
+    consistency_level = "Session"
+  }
+
+  geo_location {
+    failover_priority = 0
+    location          = azurerm_resource_group.example.location
+  }
+}
+
+resource "azurerm_cosmosdb_mongo_database" "cosmosdb" {
+  name                = "cosmos-${var.application_name}-001"
+  resource_group_name = azurerm_cosmosdb_account.cosmosdb.resource_group_name
+  account_name        = azurerm_cosmosdb_account.cosmosdb.name
+}
+
+resource "azurerm_spring_cloud_service" "example" {
+  name                = "${var.application_name}"
+  resource_group_name = azurerm_resource_group.example.name
+  location            = azurerm_resource_group.example.location
+}
+
+resource "azurerm_spring_cloud_app" "example" {
+  name                = "${var.application_name}-app"
+  resource_group_name = azurerm_resource_group.example.name
+  service_name        = azurerm_spring_cloud_service.example.name
+  is_public           = true
+  https_only          = true
+}
+
+resource "azurerm_spring_cloud_java_deployment" "example" {
+  name                = "default"
+  spring_cloud_app_id = azurerm_spring_cloud_app.example.id
+  cpu                 = 2
+  memory_in_gb        = 4
+  instance_count      = 2
+  jvm_options         = "-XX:+PrintGC"
+  runtime_version     = "Java_11"
+
+  environment_variables = {
+    "azure.cosmosdb.uri" : azurerm_cosmosdb_account.cosmosdb.connection_strings[0]
+    "azure.cosmosdb.database" : azurerm_cosmosdb_mongo_database.cosmosdb.name
+  }
+}
+
+resource "azurerm_spring_cloud_active_deployment" "example" {
+  spring_cloud_app_id = azurerm_spring_cloud_app.example.id
+  deployment_name     = azurerm_spring_cloud_java_deployment.example.name
+}
+```
+
+---
 
 ## <a name="next-steps"></a>Pasos siguientes
 
